terraform/lb.tf
resource "aws_lb" "main" {
  name               = "realworld-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.load-balancer.id]
  subnets            = [aws_subnet.public-a.id, aws_subnet.public-b.id]

  tags = { Name = "realworld-alb" }
}

resource "aws_lb_target_group" "app" {
  name        = "realworld-tg"
  port        = 8090
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"

  health_check {
    path                = "/api/healthcheck"
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }

  tags = { Name = "realworld-tg" }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app.arn
  }
}
